# appcenter

./: .editorconfig  .gitignore  .travis.yml  AUTHORS  BACKERS.md  CMakeLists.txt  INSTALL  README.md  TESTING.md  config.vala.cmake  config.vala.in  creenshot_arrows_revealer  meson.build  meson_options.txt  rebuild.sh
.github/: CI.workflow  ISSUE_TEMPLATE.md  stale.yml
casper/: 99disable-pop-shop
cmake/: GSettings.cmake  Translations.cmake
daemon/: CMakeLists.txt  Daemon.vala
data/: CMakeLists.txt  appcenter-daemon.desktop.in  appcenter.appdata.xml  appcenter.appdata.xml.in  appcenter.blacklist  appcenter.desktop.in  appcenter.desktop.in.in  appcenter.hiddenapps  appcenter.metainfo.xml.in  appcenter.service  appcenter.service.in  appcentre.desktop.in  application.css  io.elementary.appcenter-daemon.desktop.in  io.elementary.appcenter-flatpak-repair-system.service  io.elementary.appcenter-flatpak-repair-user.desktop  io.elementary.appcenter.appdata.xml.in  io.elementary.appcenter.appdata.xml.in.in  io.elementary.appcenter.desktop.in.in  io.elementary.appcenter.gresource.xml  io.elementary.appcenter.gschema.xml  io.elementary.appcenter.policy.in  io.elementary.appcenter.search-provider.ini.in  io.elementary.appcenter.service.in  io.elementary.appcenter.timer  io.elementary.appcenter.update-check.sh.in  meson.build  org.pantheon.AppCenter.service.in  org.pantheon.appcenter-daemon.desktop.in  org.pantheon.appcenter.desktop.in.in
data/icons/: categories.gresource.xml
data/styles/: .stylelintrc.json  AbstractAppContainer.scss  AppHistoryRow.css  AppInfoView.css  AppInfoView.scss  AppListUpdateView.css  Banner.scss  Category.scss  CategoryPage.scss  HomePage.scss  Index.scss  MainWindow.scss  NonCuratedWarningDialog.css  PackageRowGrid.scss  ProgressButton.css  ProgressButton.scss  ReleaseRow.scss  Screenshot.css  Screenshot.scss  SearchListItem.scss  SearchPage.scss  _common.scss  application.css  arrow.css  badge.css  banner.css  categories.css  fallback.css  loading.css  meson.build  screenshots.css  styles.gresource.xml
debian/: 60appcenter  99disable-appcenter-daemon  appcenter-casper.install  appcenter-daemon.install  appcenter.install  appcenter.links  appcenter.list  appcenter.maintscript  appcenter.postinst  appcenter.triggers  changelog  control  copyright  io.elementary.appcenter-casper.install  io.elementary.appcenter-casper.triggers  io.elementary.appcenter.install  not-installed  pop-shop-casper.install  pop-shop-casper.triggers  pop-shop.install  pop-shop.postinst  postinst  rules
po/: CMakeLists.txt  LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  appcenter.pot  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+164 more)
schemas/: CMakeLists.txt  io.elementary.appcenter.gschema.xml  org.pantheon.appcenter.gschema.xml  org.pantheon.appcenter.gschema.xml.in
src/: AbstractAppContainer.vala  AbstractAppList.vala  Application.vala  AsyncMutex.vala  CMakeLists.txt  Homepage.vala  MainPanel.vala  MainWindow.vala  Settings.vala  SuspendControl.vala  Utils.vala  config.vala.in  meson.build
src/Core/: AddonFilter.vala  AppCategories.vala  Backend.vala  BackendAggregator.vala  BackendInterface.vala  CardUtils.vala  Category.vala  CategoryManager.vala  ChangeInformation.vala  Client.vala  Component.vala  ComponentValidator.vala  Details.vala  Dpkg.vala  FirmwareClient.vala  FlatpakBackend.vala  FlatpakDriversBackend.vala  Houston.vala  HttpClient.vala  Info.vala  Job.vala  ODRSProvider.vala  OperationEnum.vala  Package.vala  PackageIndex.vala  PackageKitBackend.vala  PackageKitClient.vala  PackageKitJob.vala  PackageList.vala  PkBackend.vala  PkPackage.vala  RpmOstreeBackend.vala  ScreenshotCache.vala  SearchEngine.vala  SearchManager.vala  SoupClient.vala  Stripe.vala  Summary.vala  Task.vala  UbuntuDriversBackend.vala  (+3 more)
src/Dialogs/: AccountDialog.vala  AppHistoryDialog.vala  ContentWarningDialog.vala  InstallFailDialog.vala  InstallGStreamerPluginsDialog.vala  MessageDialog.vala  NonCuratedWarningDialog.vala  PreferencesDialog.vala  ReleasesDialog.vala  RepairFailDialog.vala  RestartDialog.vala  StripeDialog.vala  UninstallConfirmDialog.vala  UninstallFailDialog.vala  UpdateFailDialog.vala  UpgradeFailDialog.vala
src/Interfaces/: AppRowInterface.vala
src/Misc/: ViewEnum.vala
src/Services/: AccountProxy.vala  DBusInterfaces.vala  DBusServer.vala  PackageKitSessionBus.vala  SearchProvider.vala  XmlParser.vala
src/Views/: AbstractView.vala  AppInfoView.vala  AppInfoView.vala.orig  AppListUpdateView.vala  AppListView.vala  AuthorView.vala  BrowseView.vala  CategoryView.vala  FeaturedView.vala  Homepage.vala  InstalledView.vala  SearchView.vala  SettingsView.vala  UpdateView.vala  View.vala
src/Widgets/: AbstractAppContainer.vala  AbstractAppList.vala  ActionButton.vala  ActionStack.vala  AddonList.vala  AppActionButton.vala  AppCellRenderer.vala  AppHistoryRow.vala  AppIcon.vala  AppListRow.vala  AppRow.vala  AppScreenshot.vala  BackButton.vala  Banner.vala  CardNumberEntry.vala  CategoryFlowBox.vala  CategoryItem.vala  FeaturedButton.vala  HeaderBar.vala  HumbleButton.vala  HumblePopover.vala  InfoBar.vala  LinkListBox.vala  NetworkInfoBar.vala  PackageGridView.vala  PackageListItem.vala  PackageRow.vala  PaymentMethodButton.vala  ProgressButton.vala  ReleaseListBox.vala  ReleaseRow.vala  ReleaseWidget.vala  Screenshot.vala  SearchListItem.vala  SharePopover.vala  SizeLabel.vala  StripeDialog.vala  Switcher.vala  UpdateHeaderRow.vala
src/Widgets/AppContainers/: AbstractAppContainer.vala  AbstractPackageRowGrid.vala  InstalledPackageRowGrid.vala  ListPackageRowGrid.vala
src/Widgets/Carousel/: AuthorCarousel.vala  Carousel.vala  CarouselItem.vala
test/: CoreTest.vala  Integration.vala  MockBackend.vala  MockHttpClient.vala  config.vala.in  meson.build
test/Core/: CardUtils.vala  Houston.vala  PackageOperations.vala  SoupClient.vala  Stripe.vala
test/Integration/: SoupClient.vala
(+150 files in other folders)
