option('curated', type : 'boolean', value : true, description : 'Differentiate between apps created for elementary OS and not')
option('payments', type : 'boolean', value : true, description : 'Enable payment features and display paid apps')
option('hide_upstream_distro_apps', type : 'boolean', value : true, description : 'Used for hiding Ubuntu repo apps on elementary OS')
option('runtime_name', type : 'string', value : 'io.elementary.Platform', description : 'The name of the distributor runtime')
option('integration_tests', type : 'boolean', value : false, description : 'Enable integration tests, require internet connection')
